load("@rules_cc//cc:defs.bzl", "cc_test")

test_suite(
    name = "third_party_tests",
    tests = [
        # Example of how a user can ensure all our tests pass on their machine.
        "@odygrd_quill//quill/test:all_tests",
    ],
)

cc_test(
    name = "trivial_test",
    srcs = ["trivial_test.cc"],
    deps = [
        "@odygrd_quill//:quill",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "trivial_noexcept_test",
    srcs = ["trivial_test.cc"],
    deps = [
        "@odygrd_quill//:quill_noexcept",
        "@com_google_googletest//:gtest",
    ],
)
