load("@rules_cc//cc:defs.bzl", "cc_test")

test_suite(
    name = "third_party_tests",
    tests = [
        # Example of how a user can ensure all our tests pass on their machine.
        "@odygrd_quill//quill/test:all_tests",
    ],
)

cc_test(
    name = "trivial_test",
    srcs = ["trivial_test.cc"],
    deps = [
        "@com_google_googletest//:gtest",
        "@odygrd_quill//:quill",
    ],
)

cc_test(
    name = "trivial_noexcept_test",
    srcs = ["trivial_test.cc"],
    deps = [
        "@com_google_googletest//:gtest",
        "@odygrd_quill//:quill_noexcept",
    ],
)

cc_test(
    name = "trivial_custom_test",
    srcs = ["trivial_test.cc"],
    deps = [
        "@com_google_googletest//:gtest",
        "@quill_custom",
    ],
)
