load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_cc",
    strip_prefix = "rules_cc-main",
    urls = ["https://github.com/bazelbuild/rules_cc/archive/main.tar.gz"],
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies", "rules_cc_toolchains")

rules_cc_dependencies()

rules_cc_toolchains()

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-master",
    urls = ["https://github.com/google/googletest/archive/master.tar.gz"],
)

local_repository(
    name = "odygrd_quill",
    path = "../../",
)

new_local_repository(
    name = "quill_custom",
    build_file = "//:quill.bazel",
    path = "../../",
    #strip_prefix = "quill-master",
    #urls = ["https://github.com/odygrd/quill/archive/refs/heads/master.tar.gz"],
)

http_archive(
    name = "fmt",
    build_file = "//:fmt.bazel",
    strip_prefix = "fmt-master",
    urls = ["https://github.com/fmtlib/fmt/archive/refs/heads/master.tar.gz"],
)
