load("@rules_cc//cc:defs.bzl", "cc_library")

licenses(["notice"])  # MIT

exports_files(["LICENSE.rst"])

cc_library(
    name = "fmt",
    srcs = glob(
        [
            "src/*.cc",
        ],
        exclude = ["src/fmt.cc"],  # modules not supported yet.
    ),
    hdrs = glob([
        "include/fmt/*.h",
    ]),
    includes = [
        "include",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)
