add_executable(quill_single_logger_multiple_sink_formats_1 single_logger_multiple_sink_formats_1.cpp)
set_common_compile_options(quill_single_logger_multiple_sink_formats_1)
target_link_libraries(quill_single_logger_multiple_sink_formats_1 quill)

add_executable(quill_single_logger_multiple_sink_formats_2 single_logger_multiple_sink_formats_2.cpp)
set_common_compile_options(quill_single_logger_multiple_sink_formats_2)
target_link_libraries(quill_single_logger_multiple_sink_formats_2 quill)
